--- a/trunk/templates/reg.html
+++ b/trunk/templates/reg.html
@@ -1,23 +1,23 @@
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=gbk" />
 </head>
 
 <form name="myform" method="post" action="reg.php">
 <table>
 	<tr align="center">
-		閭
+		邮箱
 		<input name="id" type="text" value="" />
 	</tr>
 	<tr>
-		鐧婚檰瀵嗙爜
+		登陆密码
 		<input name="pw" type="password" value="" />
 	</tr>
 	<tr>
-		鍐嶆杈撳叆鐧婚檰瀵嗙爜
+		再次输入登陆密码
 		<input name="pw2" type="password" value="" />
 	</tr>
 	<tr>
-		<input name="tijiao" type="submit" value="鎻愪氦" />
+		<input name="tijiao" type="submit" value="提交" />
 	</tr>
 </table>
 </form>
