--- a/trunk/templates/status.html
+++ b/trunk/templates/status.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
-<link type="text/css" href="../css/main.css" rel="stylesheet" />
+<link type="text/css" href="css/main.css" rel="stylesheet" />
 </head>
 <div id="header"></div>
 <div id="wrap">
