--- a/trunk/templates/reg.html
+++ b/trunk/templates/reg.html
@@ -10,7 +10,7 @@
 <table class="form">
 <caption>用户注册</caption>
 	<tr align="center">
-		<td align="right">邮箱</td>
+		<td align="right">用户名</td>
 		<td><input name="id" type="text" value="" /></td>
 	</tr>
 	<tr>
@@ -20,6 +20,18 @@
 	<tr>
 		<td align="right">再次输入登陆密码</td>
 		<td><input name="pw2" type="password" value="" /></td>
+	</tr>
+	<tr>
+	<td align="right">旺旺账号：</td>
+		<td><input name="taobao_name" type="text" value="" /></td>
+	</tr>
+	<tr>
+		<td align="right">QQ</td>
+		<td><input name="qq" type="text" value="" /></td>
+	</tr>
+		<tr>
+		<td align="right">E-mail</td>
+		<td><input name="email" type="text" value="" /></td>
 	</tr>
 	<tr>
     <td colspan="2" align="right">
