--- a/trunk/templates/login.html
+++ b/trunk/templates/login.html
@@ -8,7 +8,7 @@
 <div id="wrap">
 <form name="myform" method="post" action="login.php">
 <table class="form">
-<caption>用户注册</caption>
+<caption>用户登陆</caption>
 	<tr align="center">
 		<td align="right">用户名</td>
 		<td><input name="id" type="text" value="" /></td>
