--- a/trunk/templates/status.html
+++ b/trunk/templates/status.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
-<link type="text/css" href="css/main.css" rel="stylesheet" />
+<link type="text/css" href="../css/main.css" rel="stylesheet" />
 </head>
 <div id="header"></div>
 <div id="wrap">
@@ -10,40 +10,40 @@
 <table class="form">
 	<caption>用户信息</caption>
 	<tr>
-		<td align="right">用户名：</td>
-		<td>{$name}</td>
+		<td align="right" width="40%">用户名：</td>
+		<td align="left">{$name}</td>
 	</tr>
 	<tr>
 		<td align="right">密码：</td>
-		<td><input name="pw" type="text" value="{$password}" /></td>
+		<td align="left"><input name="pw" type="text" value="{$password}" /></td>
 	</tr>
 	<tr>
 		<td align="right">旺旺账号：</td>
-		<td><input name="taobao_name" type="text" value="{$taobao_name}" /></td>
+		<td align="left"><input name="taobao_name" type="text" value="{$taobao_name}" /></td>
 	</tr>
 	<tr>
 		<td align="right">QQ：</td>
-		<td><input name="qq" type="text" value="{$qq}" /></td>
+		<td align="left"><input name="qq" type="text" value="{$qq}" /></td>
 	</tr>
 	<tr>
 		<td align="right">E-mail：</td>
-		<td><input name="email" type="text" value="{$email}" /></td>
+		<td align="left"><input name="email" type="text" value="{$email}" /></td>
 	</tr>
 	<input name="id" type="hidden" value="{$name}" />
 	{if $paytime != ''}
 	<tr>
 		<td align="right">订购时间：</td>
-		<td>{$paytime}</td>
+		<td align="left">{$paytime}</td>
 	</tr>
 	<tr>
 		<td align="right">到期时间：</td>
-		<td>{$overtime}</td>
+		<td align="left">{$overtime}</td>
 	</tr>
 
 	{/if}
 	<tr>
-		<td colspan="2" align="right"><input name="tijiao" type="submit"
-			value="修改信息" /></td>
+    <td></td>
+		<td align="left"><input name="tijiao" type="submit" value="修改信息" class="tijiao"/></td>
 	</tr>
 	<!--tr>
 		<a href="alipay/enter.php?name={$name}&yue=10">付费</a>
@@ -54,8 +54,8 @@
 <form name="pay" method="post" action="alipay/enter.php">
 <table class="form">
 	<tr>
-	<td align="right">选择付费（续费）时长：</td>
-	<td>
+	<td align="right" width="40%">选择付费（续费）时长：</td>
+	<td align="left">
     	<input type="radio" name="paymonth" value="1"/>1个月
         <input type="radio" name="paymonth" value="3"/>3个月
         <input type="radio" name="paymonth" value="6"/>6个月
@@ -64,7 +64,8 @@
     </tr>
     	<input name="name" type="hidden" value="{$name}" />
     <tr>
-    <td colspan="2" align="right"><input type="submit" value="付费" /></td>
+    <td></td>
+    <td align="left"><input type="submit" value="付费" class="tijiao"/></td>
     </tr>
 
 </table>
