--- a/templates/login.html
+++ b/templates/login.html
@@ -2,24 +2,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
-<link type="text/css" href="css/main.css" rel="stylesheet" />
+<link type="text/css" href="../css/main.css" rel="stylesheet" />
 </head>
 <div id="header"></div>
 <div id="wrap">
 <form name="myform" method="post" action="login.php">
 <table class="form">
 <caption>用户登陆</caption>
-	<tr align="center">
-		<td align="right">用户名</td>
-		<td><input name="id" type="text" value="" /></td>
+	<tr>
+		<td align="right" width="40%">用户名</td>
+		<td align="left"><input name="id" type="text" value="" style="width:150px"/></td>
 	</tr>
 	<tr>
-		<td align="right">密 码</td>
-		<td><input name="pw" type="password" value="" /></td>
+		<td align="right">密&nbsp;&nbsp;码</td>
+		<td align="left"><input name="pw" type="password" value="" style="width:150px"/></td>
 	</tr>
 	<tr>
-		<td colspan="2" align="right">
-        <input name="tijiao" type="submit" value="提交" class ="tijiao"/> <a href="reg.php">注册</a>
+    	<td></td>
+		<td align="left">
+        <input name="tijiao" type="submit" value="登录" class ="tijiao"/> <a href="reg.php" style="font-size:105%">注册</a>
         </td>
 	</tr>
 </table>
