--- a/templates/reg.html
+++ b/templates/reg.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gbk" />
-<link type="text/css" href="css/main.css" rel="stylesheet" />
+<link type="text/css" href="../css/main.css" rel="stylesheet" />
 </head>
 <div id="header"></div>
 <div id="wrap">
@@ -10,31 +10,32 @@
 <table class="form">
 <caption>用户注册</caption>
 	<tr align="center">
-		<td align="right">用户名</td>
-		<td><input name="id" type="text" value="" /></td>
+		<td align="right" width="40%">用户名：</td>
+		<td align="left"><input name="id" type="text" value="" /></td>
 	</tr>
 	<tr>
-		<td align="right">登陆密码</td>
-		<td><input name="pw" type="password" value="" /></td>
+		<td align="right">登陆密码：</td>
+		<td align="left"><input name="pw" type="password" value="" /></td>
 	</tr>
 	<tr>
-		<td align="right">再次输入登陆密码</td>
-		<td><input name="pw2" type="password" value="" /></td>
+		<td align="right">再次输入登陆密码：</td>
+		<td align="left"><input name="pw2" type="password" value="" /></td>
 	</tr>
 	<tr>
-	<td align="right">旺旺账号：</td>
-		<td><input name="taobao_name" type="text" value="" /></td>
+		<td align="right">旺旺账号：</td>
+		<td align="left"><input name="taobao_name" type="text" value="" /></td>
 	</tr>
 	<tr>
-		<td align="right">QQ</td>
-		<td><input name="qq" type="text" value="" /></td>
+		<td align="right">QQ：</td>
+		<td align="left"><input name="qq" type="text" value="" /></td>
 	</tr>
 		<tr>
-		<td align="right">E-mail</td>
-		<td><input name="email" type="text" value="" /></td>
+		<td align="right">E-mail：</td>
+		<td align="left"><input name="email" type="text" value="" /></td>
 	</tr>
 	<tr>
-    <td colspan="2" align="right">
+    <td></td>
+    <td align="left">
 		<input name="tijiao" type="submit" value="提交"  class ="tijiao"/>        </td>
 	</tr>
 </table>
