--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <script src="js/jquery.easing.pack.js" type="text/javascript"></script>
 <script src="js/jquery.siteFeature2.pack.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
-<title>美国主机代理</title>
+<title>高速美国主机代理 SSH代理 VPN代理 网页代理</title>
 </head>
 <body>
 <div id="header"><a href="#" id="logo"></a></div>
@@ -164,7 +164,8 @@
 </div>
 <div id="content">
 <div id="slide">
-<h3>说点儿什么。。</h3>
+<h3>请新老用户注意啦！老用户可以用自己的账户登陆网站，查看账户使用期限，修改密码和自助续费。新用户注册即可得到测试账号，您测试用户着靠谱
+的话可以网上自助开通~支付宝担保付款，安全放心！支付后立即生效~</h3>
 <div id="preFeature2" style="border: 5px solid #666">
 <div><img src="images/twitter.jpg" alt="twitter snapshot" />
 <p>想上twitter看看您喜欢的明星天天在干什么嘛？</p>
@@ -181,7 +182,7 @@
 </div>
 </div>
 <div id="webproxy">
-<h3>马上尝试一下？</h3>
+<h3>网页代理入口</h3>
 <form action="webproxy/includes/process.php?action=update" method="post"
 	class="form"><input type="text" name="u" id="input" size="30"
 	class="textbox"><input type="submit" value="Go" class="button"></form>
