加入新的服务器

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,8 @@
 </div>
 <div id="htmlform3" style="display: none">
 <div id="diffform">
-<p>使用帮助内容待定。。。</p>
+<p>新用户注册后可以得到三天免费试用的账号~不过账号密码是一天一换的哦，记得每天上来看一下<br>
+myentunnle+firefox的教程在<a href="http://blog.licess.org/myentunnel-firefox-foxyproxy-ssh/">这里</a></p>
 </div>
 <div class="close">&nbsp;&nbsp;&nbsp;</div>
 </div>
@@ -167,7 +168,8 @@
 <h3>请新老用户注意啦！老用户可以用自己的账户登陆网站，查看账户使用期限，修改密码和自助续费。新用户注册即可得到测试账号，您测试用户着靠谱
 的话可以网上自助开通~支付宝担保付款，安全放心！支付后立即生效~
 <br>每个用户可以使用所有SSH服务器，哪个快您用哪个，没有任何限制~
-现有服务器（不断扩充中）:
+现有服务器:
+<br>ssh1.fan-qiang.com(最新)
 <br>ssh2.fan-qiang.com
 <br>ssh3.fan-qiang.com
 <br>ssh6.fan-qiang.com</h3>
