--- a/trunk/templates/index.html
+++ b/trunk/templates/index.html
@@ -165,7 +165,7 @@ myentunnle+firefox的教程在<a href="http://blog.licess.org/myentunnel-firefox-fox
 </div>
 <div id="content">
 <div id="slide">
-<h3>请新老用户注意啦！老用户可以用自己的账户登陆网站，查看账户使用期限，修改密码和自助续费。新用户注册即可得到测试账号，您测试用户着靠谱
+<h3>请新老用户注意啦！<br>老用户可以用自己的账户登陆网站，查看账户使用期限，修改密码和自助续费。<br>新用户注册即可得到测试账号（正在加。。），您测试用户着靠谱
 的话可以网上自助开通~支付宝担保付款，安全放心！支付后立即生效~
 <br>每个用户可以使用所有SSH服务器，哪个快您用哪个，没有任何限制~
 现有服务器:
