--- a/templates/index.html
+++ b/templates/index.html
@@ -199,7 +199,7 @@ myentunnle+firefox的教程在<a href="http://blog.licess.org/myentunnel-firefox-fox
 </div>
 
 <div id="bottom">
-<p>Copyright</p>
+<p>Copyright：fan-qiang.com</p>
 </div>
 </body>
 </html>
