--- a/trunk/templates/status.html
+++ b/trunk/templates/status.html
@@ -41,7 +41,7 @@
 	</tr>
 	<tr>
 		<td align="right">²âÊÔÃÜÂë£º</td>
-		<td align="left">{$testpasswd}</td>
+		<td align="left">{$testpassword}</td>
 	</tr>
 	{/if}
 	<input name="id" type="hidden" value="{$name}" />
