--- a/templates/index.html
+++ b/templates/index.html
@@ -95,7 +95,8 @@
 <div id="htmlform3" style="display: none">
 <div id="diffform">
 <p>新用户注册后可以得到三天免费试用的账号~不过账号密码是一天一换的哦，记得每天上来看一下<br>
-myentunnle+firefox的教程在<a href="http://blog.licess.org/myentunnel-firefox-foxyproxy-ssh/">这里</a></p>
+myentunnle+firefox的教程在<a href="http://blog.licess.org/myentunnel-firefox-foxyproxy-ssh/">这里</a>
+<br>未完待续</p>
 </div>
 <div class="close">&nbsp;&nbsp;&nbsp;</div>
 </div>
@@ -165,14 +166,14 @@ myentunnle+firefox的教程在<a href="http://blog.licess.org/myentunnel-firefox-fox
 </div>
 <div id="content">
 <div id="slide">
-<h3>请新老用户注意啦！老用户可以用自己的账户登陆网站，查看账户使用期限，修改密码和自助续费。新用户注册即可得到测试账号（正在加。。），您测试用户着靠谱
-的话可以网上自助开通~支付宝担保付款，安全放心！支付后立即生效~
-<br>每个用户可以使用所有SSH服务器，哪个快您用哪个，没有任何限制~
-现有服务器:
-<br>ssh1.fan-qiang.com(最新)
-<br>ssh2.fan-qiang.com
-<br>ssh3.fan-qiang.com
-<br>ssh6.fan-qiang.com</h3>
+<h3>买一个等于买四个啦！服务水平大升级！您购买的账号可以在4个不同的服务器上使用，且机房贯穿美国东西部，您可以选择您最快的使用！
+<br>您可以使用fan-qiang.com自助购买续费，全部自动发货~！
+<br>现有服务器:
+<br>ssh1.fan-qiang.com (洛杉矶，推荐)
+<br>ssh2.fan-qiang.com (宾西法尼亚)
+<br>ssh3.fan-qiang.com (宾西法尼亚)
+<br>ssh6.fan-qiang.com (奥兰多)
+</h3>
 <div id="preFeature2" style="border: 5px solid #666">
 <div><img src="images/twitter.jpg" alt="twitter snapshot" />
 <p>想上twitter看看您喜欢的明星天天在干什么嘛？</p>
@@ -199,6 +200,9 @@ myentunnle+firefox的教程在<a href="http://blog.licess.org/myentunnel-firefox-fox
 </div>
 
 <div id="bottom">
+<p>
+<a target='_blank' href='http://web.im.alisoft.com/msg.aw?v=2&uid=kecker&site=cnalichn&s=1' ><img border='0' src='http://web.im.alisoft.com/online.aw?v=2&uid=junhaouv&site=cnalichn&s=1' alt='发送旺旺即时消息' /></a>
+</p>
 <p>Copyright：fan-qiang.com</p>
 </div>
 </body>
