--- a/templates/index.html
+++ b/templates/index.html
@@ -201,6 +201,9 @@ myentunnle+firefox的教程在<a href="http://blog.licess.org/myentunnel-firefox-fox
 
 <div id="bottom">
 
+<a target="_blank" href="http://amos1.taobao.com/msg.ww?v=2&uid=kecker&s=1" ><img border="0" src="http://amos1.taobao.com/online.ww?v=2&uid=kecker&s=1" alt="来旺我啊" /></a>
+<a href="http://sighttp.qq.com/cgi-bin/check?sigkey=a3e4dfe81939b15d91ca87a0fd7327a2aaceeaab1f244f46183bb71726149eaf"; target=_blank; onclick="var tempSrc='http://sighttp.qq.com/wpa.js?rantime='+Math.random()+'&sigkey=a3e4dfe81939b15d91ca87a0fd7327a2aaceeaab1f244f46183bb71726149eaf';var oldscript=document.getElementById('testJs');var newscript=document.createElement('script');newscript.setAttribute('type','text/javascript'); newscript.setAttribute('id', 'testJs');newscript.setAttribute('src',tempSrc);if(oldscript == null){document.body.appendChild(newscript);}else{oldscript.parentNode.replaceChild(newscript, oldscript);}return false;"><img border="0" SRC='http://wpa.qq.com/pa?p=1:58287926:43' alt="来Q我吧"></a>
+
 <p>Copyright：fan-qiang.com</p>
 </div>
 </body>
