--- a/trunk/templates/status.html
+++ b/trunk/templates/status.html
@@ -35,7 +35,7 @@
 		<td align="right">◊¢≤· ±º‰£∫</td>
 		<td align="left">{$regtime}</td>
 	</tr>
-	{if $testpassword == ''}
+	{if $testpassword != ''}
 
 	<tr>
 		<td align="right">≤‚ ‘’À∫≈£∫</td>
