--- a/templates/status.html
+++ b/templates/status.html
@@ -59,6 +59,25 @@
 
 	{/if}
 	<tr>
+		<td align="left">可用服务器：</td>
+	</tr>
+	<tr>
+		<td align="right">服务器1：</td>
+		<td align="left">ssh1.fan-qiang.com (洛杉矶，推荐)</td>
+	</tr>
+	<tr>
+		<td align="right">服务器2：</td>
+		<td align="left">ssh2.fan-qiang.com (宾西法尼亚)</td>
+	</tr>
+	<tr>
+		<td align="right">服务器3：</td>
+		<td align="left">ssh3.fan-qiang.com (宾西法尼亚)</td>
+	</tr>
+	<tr>
+		<td align="right">服务器6：</td>
+		<td align="left">ssh6.fan-qiang.com (奥兰多)</td>
+	</tr>
+	<tr>
 		<td></td>
 		<td align="left"><input name="tijiao" type="submit" value="修改信息"
 			class="tijiao" /></td>
@@ -73,10 +92,10 @@
 <table class="form">
 	<tr>
 		<td align="right" width="40%">选择付费（续费）时长：</td>
-		<td align="left"><input type="radio" name="paymonth" value="1" />1个月(4.5￥)
-		<input type="radio" name="paymonth" value="3" />3个月 (13￥)<input
-			type="radio" name="paymonth" value="6" />半年(25￥)<input type="radio"
-			name="paymonth" value="12" />一年(45￥)</td>
+		<td align="left"><input type="radio" name="paymonth" value="1" />1个月 (4.5￥)<br>
+		<input type="radio" name="paymonth" value="3" />3个月 (13￥)<br><input
+			type="radio" name="paymonth" value="6" />6个月  (25￥)<br><input type="radio"
+			name="paymonth" value="12" />12个月(45￥)</td>
 	</tr>
 	<input name="name" type="hidden" value="{$name}" />
 	<tr>
