--- a/templates/status.html
+++ b/templates/status.html
@@ -43,7 +43,7 @@
 	</tr>
 	<tr>
 		<td align="right">测试密码：</td>
-		<td align="left">{$testpassword}</td>
+		<td align="left">{$testpassword}（可能每日一变，登陆可查）</td>
 	</tr>
 	{/if} {/if}
 	<input name="id" type="hidden" value="{$name}" />
