--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,10 @@
 			style="width: 150px" /></td>
 	</tr>
 	<tr>
+		<td align="right">输入验证码：</td>
+		<td align="left"><input name="yz" type="text" value="" /><img src="yz.php" align="absmiddle" /></td>
+	</tr>
+	<tr>
 		<td></td>
 		<td align="left"><input name="tijiao" type="submit" value=""
 			class="login" /> <a href="#" id="forgetpass">忘记密码？</a></td>
@@ -81,6 +85,10 @@
 	<tr>
 		<td align="right">E-mail：</td>
 		<td align="left"><input name="email" type="text" value="" /></td>
+	</tr>
+			<tr>
+		<td align="right">输入验证码：</td>
+		<td align="left"><input name="yz" type="text" value="" /><img src="yz.php" align="absmiddle" /></td>
 	</tr>
 	<tr>
 		<td></td>
