--- a/templates/reg.html
+++ b/templates/reg.html
@@ -33,6 +33,12 @@
 		<td align="right">E-mail£∫</td>
 		<td align="left"><input name="email" type="text" value="" /></td>
 	</tr>
+		<tr>
+		<td align="right"> ‰»Î—È÷§¬Î£∫</td>
+		<td align="left"><input name="yz" type="text" value="" /><img src="yz.php" align="absmiddle" /></td>
+	</tr>
+	
+
 	<tr>
     <td></td>
     <td align="left">
