--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <script src="js/jquery.easing.pack.js" type="text/javascript"></script>
 <script src="js/jquery.siteFeature2.pack.js" type="text/javascript"></script>
 <script src="js/main.js" type="text/javascript"></script>
-<title>SSH代理 VPN代理 网页代理 高速美国主机代理</title>
+<title>翻墙 SSH代理 VPN代理 网页代理 高速美国主机代理</title>
 </head>
 <body>
 <div id="header"><a href="#" id="logo"></a></div>
