--- a/templates/index.html
+++ b/templates/index.html
@@ -236,7 +236,7 @@ myentunnel对速度有限制，如果您主要是看YOUTUBE的话建议换成tunnelier,教程在<a href
 </div>
 <div id="webproxy">
 <h3>网页代理入口
-<form action="webproxy/includes/process.php?action=update" method="post"
+<form action="http://ssh1.fan-qiang.com/sshweb/webproxy/includes/process.php?action=update" method="post"
 	class="form"><input type="text" name="u" id="input" size="30"
 	class="textbox"><input type="submit" value="Go" class="button"></form>
 </h3>
