--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,8 @@
 <ul>
 	<li><a href="#" id="loginbutton"><span>登&nbsp;录</span></a></li>
 	<li><a href="#" id="regbutton"><span>注&nbsp;册</span></a></li>
-	<li><a href="#" id="helpbutton"><span><font color=blue>购买疑问</font></span></a></li>
-	<li><a href="#" id="pricebutton"><span><font color=red>永久免费翻墙号</font></span></a></li>
+	<li><a href="#" id="helpbutton"><span><font color=red>购买疑问</font></span></a></li>
+	<li><a href="#" id="pricebutton"><span><font color=blue>购买费用</font></span></a></li>
 </ul>
 </div>
 <div id="arrow1" style="display: none"></div>
@@ -125,19 +125,15 @@ myentunnel对速度有限制，如果您主要是看YOUTUBE的话建议换成tunnelier,教程在<a href
 <div id="htmlform4" style="display: none">
 <div id="diffform">
 <p>
-<p><font color=red size="5">不限时，不改密码，不自动掉线，365*24小时在线的免费SSH服务器账号：<br>
-<br>服务器：ssh3.fan-qiang.com
-<br>用户名：fan-qiang.com
-<br>密码：fan-qiang.com
-<br>端口：22</font>
+
+<font color=blue size="5">
+人间遍种自由花！
+<br>注册即可得测试账号，测试满意再付费~每天一毛多，买一个等于买四个！
 <br>
-<br>
-<br>
-<font color=blue size="5">其他服务器的收费账号，每天只要0.1元，享受极速服务~
-<br>1个月 4.5元
-<br>3个月  13元
-<br>6个月  25元
-<br>12个月  45元</font>
+<br>一个月 4.5元
+<br>三个月  13元
+<br>六个月  25元
+<br>一年  &nbsp;&nbsp;45元</font>
 
 </p>
 </div>
